fix title wrap

--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -5,16 +5,15 @@
 
 .container {
   min-width: 280px;
-  margin: 0 auto;
 }
 
 .main {
   padding: 20px;
   margin: 0 auto;
+  width: 100%;
 
   @include mx.mq("lg") {
     padding: 41px 95px 258px 377px;
-    max-width: 1440px;
   }
 }
 
@@ -25,11 +24,16 @@
 }
 
 .title-wrap {
+  display: flex;
+  flex-direction: column;
   padding-bottom: 40px;
   padding-right: 13px;
+  width: 260px;
 
   @include mx.mq("lg") {
+    width: 100%;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
     padding-bottom: 40px;
